<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hazard_detector</name>
  <version>1.0.0</version>
  <description>
        This package can be used to detect rocks or similar obstacles in a provided distance frame of a stereo camera.
  </description>
  <license>GPL v3</license>
  <maintainer email="levin.gerdes@esa.int">Levin Gerdes</maintainer>
  <author email="levin.gerdes@esa.int">Levin Gerdes</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

